--- a/style.css
+++ b/style.css
@@ -8,16 +8,18 @@ ul {
 
 li {
   list-style: none;
-  padding-left: 10px;
+  padding: 10px;
+}
+
+#delete {
+  cursor: pointer;
+  padding: 5px;
 }
 
 #wrap {
   background: linear-gradient(to right, #c9d6ff, #e2e2e2);
   width: 100%;
   height: 100vh;
-  display: flex;
-  justify-content: center;
-  align-items: center;
   overflow-y: scroll;
 }
 
@@ -28,6 +30,7 @@ li {
   height: 600px;
   background-color: rgb(226, 215, 183);
   border-radius: 15px;
+  margin: 100px auto;
 }
 
 .Todo-title {
